compiler/tests/ui/fail/foo_unsafe_trait.rs
#[compiler::item("foo_unsafe")]
trait Foo {}

fn main() {}
