compiler/tests/ui/fail/foo_unsafe_trait.stderr
error: `foo_unsafe` item must be an unsafe trait
 --> tests/ui/fail/foo_unsafe_trait.rs:2:1
  |
2 | trait Foo {}
  | ^^^^^^^^^^^^
